Fixing link width on project slideshow and slideshow clipping through navbar. Adding download link for resume on About page. Reformatting About page. Adjusting top and bottom page margins.

--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -13,7 +13,7 @@
   right: 0;
   transform: translateX(100%);
   transition: 0.3s;
-  z-index: 9;
+  z-index: 11;
 }
 
 .menu > a {
