--- a/src/containers/About.css
+++ b/src/containers/About.css
@@ -9,7 +9,7 @@
 .about-hero {
   margin: auto;
   padding: 0em 2em;
-  background: rgba(0,0,0,0.4);
+  /* background: rgba(0,0,0,0.4); */
   /* width: 100%; */
 }
 
@@ -27,15 +27,19 @@
 
 
 h3.section {
-  border-bottom: solid;
+  border-top: solid;
+  border-width: 1px;
+  margin: 30px 0px 0px;
 }
 
-.place {
+.skills, .place, .date {
   margin: 0px;
 }
 
-.date {
-  margin: 0px;
+.resume-download-link p {
+  display: inline;
+  line-height: 4em;
+  text-decoration: underline;
 }
 
 @media (min-width: 720px) {
