--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -27,7 +27,7 @@ a {
   width: 90%;
   max-width: 1100px;
   /* padding-top: 60px; */
-  margin-top: 60px;
+  margin: 60px 0px 40px;
 }
 
 .App-main-title {
