--- a/src/containers/Navbar.css
+++ b/src/containers/Navbar.css
@@ -8,7 +8,7 @@
   /* justify-content: center; */
   /* align-items: center; */
   position: fixed;
-
+  z-index: 10;
 }
 
 .navbar {
